tests/ui/mir/issue-83499-input-output-iteration-ice.stderr
error: defining functions with C-variadic arguments is only allowed for free functions with the "C" or "C-unwind" calling convention
  --> $DIR/issue-83499-input-output-iteration-ice.rs:7:16
   |
LL | fn foo(_: Bar, ...) -> impl {}
   |                ^^^

error: at least one trait must be specified
  --> $DIR/issue-83499-input-output-iteration-ice.rs:7:24
   |
LL | fn foo(_: Bar, ...) -> impl {}
   |                        ^^^^

error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/issue-83499-input-output-iteration-ice.rs:7:11
   |
LL | fn foo(_: Bar, ...) -> impl {}
   |           ^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
